# nexusmind-adk

./: .env.example  CYPHER_CHEATSEAT.md  LICENSE  PLANNING.md  README.md  architecture.md  docker-compose.yaml  gradio_app.py  main.py  pyproject.toml  run.sh  streamlit_app.py
app/: agent.py  agent_v1.py  backend_engine.py  infrastructure.py  ingest.py  ingest_pipeline.py  mcp_client.py  research_pipeline.py  root_gateway.py  services.py  states.py  tools.py
app/agents/: fast_agent.py  guardrail_agent.py  ingest_nodes.py  research_nodes.py  router_agent.py
app/core/: control_engine.py  llm_router.py
app/infrastructure/: chroma_service.py  neo4j_service.py
app/ingestion/: parser_utils.py
app/prompts/: system_prompts.py
app/tools/: indexer_tools.py  mcp_registry.py
app/workflows/: ingest_pipeline.py  master_pipeline.py
config/: settings.py
scripts/: check_chroma.py  ingest.py
tests/integration/: test_pipeline.py
